[gd_scene load_steps=15 format=4 uid="uid://cfhjm65rg36m4"]

[ext_resource type="Script" path="res://ui/title_screen.gd" id="1_san4n"]
[ext_resource type="TileSet" uid="uid://d4lsxrvore2kd" path="res://maps/main_tilemap.tres" id="2_wkirf"]
[ext_resource type="Texture2D" uid="uid://bolaw41lvs0pu" path="res://assets/sprites/cloud2.png" id="3_o1cut"]
[ext_resource type="Texture2D" uid="uid://cqon5cgppsqj7" path="res://assets/sprites/cloud3.png" id="4_nax64"]
[ext_resource type="Texture2D" uid="uid://8bt5v3qdmo27" path="res://assets/sprites/background.png" id="5_nat85"]
[ext_resource type="Shader" path="res://assets/crt_filter.gdshader" id="6_x7r2v"]
[ext_resource type="PackedScene" uid="uid://cpbjwgxr7f1t3" path="res://tools/well.tscn" id="7_6djy2"]
[ext_resource type="Texture2D" uid="uid://b7505ocypkei0" path="res://assets/sprites/seed.png" id="8_p4v2a"]
[ext_resource type="PackedScene" uid="uid://bkda8mouc26ie" path="res://tools/tree.tscn" id="8_vhyda"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_6m2u8"]
load_path = "res://.godot/imported/cloud1.png-a97dbe7d6b1051a1024f1aaf3c6bf014.ctex"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kh66f"]
shader = ExtResource("6_x7r2v")
shader_parameter/resolution = Vector2(1152, 648)
shader_parameter/scan_line_amount = 0.198
shader_parameter/warp_amount = 0.058
shader_parameter/noise_amount = 0.071
shader_parameter/interference_amount = 0.424
shader_parameter/grille_amount = 0.035
shader_parameter/grille_size = 1.0
shader_parameter/vignette_amount = 0.21
shader_parameter/vignette_intensity = 0.003
shader_parameter/aberation_amount = 0.0
shader_parameter/roll_line_amount = 0.0
shader_parameter/roll_speed = -8.0
shader_parameter/scan_line_strength = -5.412
shader_parameter/pixel_strength = 0.0

[sub_resource type="Animation" id="Animation_rmp70"]
resource_name = "credits"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(0.258816, 0.120742),
"update": 0,
"values": [Vector2(288, 164), Vector2(864, 164)]
}

[sub_resource type="Animation" id="Animation_hv8gn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(288, 164)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qjen6"]
_data = {
"RESET": SubResource("Animation_hv8gn"),
"credits": SubResource("Animation_rmp70")
}

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_san4n")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.0
offset_top = -57.0
offset_right = 136.0
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 32
text = "Jack and Beanstalk"

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 436.0
offset_top = -53.0
offset_right = 704.0
offset_bottom = -21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 5
theme_override_font_sizes/font_size = 32
text = "Credits:"

[node name="Label" type="Label" parent="Label2"]
layout_mode = 0
offset_left = 9.0
offset_top = 32.0
offset_right = 346.0
offset_bottom = 105.0
text = "Devs: Bruno (@AlwaysTired44) and Raylandson

Assets
Font Pixellari
"

[node name="FrontTilemap" type="TileMapLayer" parent="." groups=["MainTileMap"]]
position = Vector2(-1, 39)
tile_map_data = PackedByteArray("AAALAAkABAAAAAAAAAAKAAkABAAAAAAAAAAJAAkABAAAAAAAAAAGAAkABAAAAAAAAAAFAAkABAAAAAAAAAAEAAkABAAAAAAAAAADAAkABAAAAAAAAAACAAkABAAAAAAAAAABAAkABAAAAAAAAAAAAAkABAAAAAAAAAD//wkABAAAAAAAAAD+/wkABAAAAAAAAAD9/wkABAAAAAAAAAD8/wkABAAAAAAAAAD7/wkABAAAAAAAAAD6/wkABAAAAAAAAAD5/wkABAAAAAAAAAD4/wkABAAAAAAAAAD3/wkABAAAAAAAAAD2/wkABAAAAAAAAAD1/wkABAAAAAAAAAD0/wkABAAAAAAAAADz/wkABAAAAAAAAADy/wkABAAAAAAAAADx/wkABAAAAAAAAADw/wkABAAAAAAAAADv/wkABAAAAAAAAADt/wkABAAAAAAAAADu/wkABAAAAAAAAADo/wkAAwAAAAAAAADn/wkAAwAAAAAAAADu/wgAAwAAAAAAAADv/wgAAwAAAAAAAADw/wgAAwAAAAAAAADx/wgAAwAAAAAAAADy/wgAAwAAAAAAAADz/wgAAwAAAAAAAAD0/wgAAwAAAAAAAAD1/wgAAwAAAAAAAAD2/wgAAwAAAAAAAAD3/wgAAwAAAAAAAAD5/wgAAwAAAAAAAAD6/wgABAAAAAAAAAD7/wgABAAAAAAAAAD8/wgABAAAAAAAAAD9/wgABAAAAAAAAAAAAAgABAAAAAAAAAABAAgABAAAAAAAAAACAAgABAAAAAAAAAADAAgABAAAAAAAAAAEAAgABAAAAAAAAAAFAAgABAAAAAAAAAAGAAgABAAAAAAAAAAHAAgABAAAAAAAAAAIAAgABAAAAAAAAAAUAAoABAAAAAAAAAAVAAoABAAAAAAAAAAWAAoABAAAAAAAAAAXAAoABAAAAAAAAAAZAAkABAAAAAAAAAAaAAkABAAAAAAAAAAbAAkABAAAAAAAAAAcAAkABAAAAAAAAAAdAAkABAAAAAAAAAAeAAkABAAAAAAAAAAfAAkABAAAAAAAAAAkAAkABAAAAAAAAAAkAAgABAAAAAAAAAAkAAcABAAAAAAAAAAkAAYAAwAAAAAAAAAIAAcAAwAAAAAAAAAHAAcAAwAAAAAAAAAGAAcAAwAAAAAAAAAFAAcAAwAAAAAAAAAEAAcAAwAAAAAAAAADAAcAAwAAAAAAAAAJAAgABAAAAAAAAAANAAkABAAAAAAAAAAMAAkABAAAAAAAAAALAAoABAAAAAAAAAAMAAoABAAAAAAAAAANAAoABAAAAAAAAAAYAAoABAAAAAAAAAAZAAoABAAAAAAAAAAaAAoABAAAAAAAAAAbAAoABAAAAAAAAAAcAAoABAAAAAAAAAAdAAoABAAAAAAAAAAeAAoABAAAAAAAAAAfAAoABAAAAAAAAAAgAAoABAAAAAAAAAAhAAoABAAAAAAAAAAiAAoABAAAAAAAAAAjAAoABAAAAAAAAAAkAAoABAAAAAAAAAAcAAcAAwAAAAAAAAAcAAgABAAAAAAAAAAbAAgAAwAAAAAAAAAYAAgAAwAAAAAAAAAdAAgABAAAAAAAAAAdAAcABAAAAAAAAAAdAAYAAwAAAAAAAAAeAAYAAwAAAAAAAAAeAAcABAAAAAAAAAAeAAgABAAAAAAAAAAfAAgABAAAAAAAAAAfAAcABAAAAAAAAAAfAAYAAwAAAAAAAAAgAAYAAwAAAAAAAAAgAAcABAAAAAAAAAAgAAgABAAAAAAAAAAgAAkABAAAAAAAAAAhAAkABAAAAAAAAAAhAAgABAAAAAAAAAAhAAcABAAAAAAAAAAhAAYAAwAAAAAAAAAiAAYAAwAAAAAAAAAiAAcABAAAAAAAAAAiAAgABAAAAAAAAAAiAAkABAAAAAAAAAAjAAkABAAAAAAAAAAjAAgABAAAAAAAAAAjAAcABAAAAAAAAAAjAAYAAwAAAAAAAAAKAAoABAAAAAAAAAAJAAoABAAAAAAAAAAIAAoABAAAAAAAAAAHAAoABAAAAAAAAAAGAAoABAAAAAAAAAAFAAoABAAAAAAAAAAEAAoABAAAAAAAAAADAAoABAAAAAAAAAACAAoABAAAAAAAAAABAAoABAAAAAAAAAAAAAoABAAAAAAAAAD//woABAAAAAAAAAD+/woABAAAAAAAAAD9/woABAAAAAAAAAD8/woABAAAAAAAAAD7/woABAAAAAAAAAD6/woABAAAAAAAAAD5/woABAAAAAAAAAD4/woABAAAAAAAAAD3/woABAAAAAAAAAD2/woABAAAAAAAAAD1/woABAAAAAAAAAD0/woABAAAAAAAAADz/woABAAAAAAAAADy/woABAAAAAAAAADx/woABAAAAAAAAADw/woABAAAAAAAAADv/woABAAAAAAAAADu/woABAAAAAAAAADt/woABAAAAAAAAADs/woABAAAAAAAAADr/woABAAAAAAAAADq/woABAAAAAAAAADp/woABAAAAAAAAADo/woABAAAAAAAAADn/woABAAAAAAAAADp/wkAAwAAAAAAAADq/wkAAwAAAAAAAADr/wkAAwAAAAAAAADs/wkAAwAAAAAAAADt/wgAAwAAAAAAAAD6/wcAAwAAAAAAAAD7/wcAAwAAAAAAAAAKAAgABAAAAAAAAAAlAAgABAAAAAAAAAAlAAkABAAAAAAAAAAlAAoABAAAAAAAAAAlAAcAAwAAAAAAAAACAAcAAwAAAAAAAAAJAAcAAwAAAAAAAAAKAAcAAwAAAAAAAAD4/wgAAwAAAAAAAAABAAcAAwAAAAAAAAAAAAcAAwAAAAAAAAD+/wgABAAAAAAAAAD+/wcABAAAAAAAAAD9/wcAAwAAAAAAAAD//wcAAwAAAAAAAAD//wgABAAAAAAAAAD+/wYAAwAAAAAAAAAHAAkABAAAAAAAAAAIAAkABAAAAAAAAADk/wcAAwAAAAAAAADj/wcAAwAAAAAAAADi/wcAAwAAAAAAAADh/wcAAwAAAAAAAADg/wgAAwAAAAAAAADf/wgAAwAAAAAAAADe/wgAAwAAAAAAAADd/wgAAwAAAAAAAADc/wgAAwAAAAAAAADb/wgAAwAAAAAAAADa/wgAAwAAAAAAAADZ/wgAAwAAAAAAAADY/wgAAwAAAAAAAADX/wkAAwAAAAAAAADW/wkAAwAAAAAAAADV/wkAAwAAAAAAAADU/wkAAwAAAAAAAADT/wkAAwAAAAAAAADS/wkAAwAAAAAAAADR/wkAAwAAAAAAAADQ/wkAAwAAAAAAAADP/wkAAwAAAAAAAADO/wkAAwAAAAAAAADN/wkAAwAAAAAAAADM/wkAAwAAAAAAAADL/wkAAwAAAAAAAADK/wkAAwAAAAAAAADJ/wkAAwAAAAAAAADI/wkAAwAAAAAAAADH/wgAAwAAAAAAAADG/wgAAwAAAAAAAADF/wgAAwAAAAAAAADE/wgAAwAAAAAAAADD/wgAAwAAAAAAAADC/wgAAwAAAAAAAADB/wgAAwAAAAAAAADA/wgAAwAAAAAAAAC//wgAAwAAAAAAAAC+/wgAAwAAAAAAAAC9/wgAAwAAAAAAAAC8/wgAAwAAAAAAAAC7/wgAAwAAAAAAAAC6/wgAAwAAAAAAAAC5/wgAAwAAAAAAAAC4/wgAAwAAAAAAAAC3/wgAAwAAAAAAAAC2/wgAAwAAAAAAAAC1/wgAAwAAAAAAAAC0/wgAAwAAAAAAAACz/wgAAwAAAAAAAACy/wgAAwAAAAAAAACx/wgAAwAAAAAAAACw/wgAAwAAAAAAAACv/wgAAwAAAAAAAACu/wgAAwAAAAAAAACt/wgAAwAAAAAAAACs/wgAAwAAAAAAAACr/wgAAwAAAAAAAACq/wgABAAAAAAAAACp/wgABAAAAAAAAACp/wkABAAAAAAAAACp/woABAAAAAAAAADm/woABAAAAAAAAADl/woABAAAAAAAAADk/woABAAAAAAAAADj/woABAAAAAAAAADi/woABAAAAAAAAADh/woABAAAAAAAAADg/woABAAAAAAAAADf/woABAAAAAAAAADe/woABAAAAAAAAADd/woABAAAAAAAAADc/woABAAAAAAAAADb/woABAAAAAAAAADa/woABAAAAAAAAADZ/woABAAAAAAAAADY/woABAAAAAAAAADX/woABAAAAAAAAADW/woABAAAAAAAAADV/woABAAAAAAAAADU/woABAAAAAAAAADT/woABAAAAAAAAADS/woABAAAAAAAAADR/woABAAAAAAAAADQ/woABAAAAAAAAADP/woABAAAAAAAAADO/woABAAAAAAAAADN/woABAAAAAAAAADM/woABAAAAAAAAADL/woABAAAAAAAAADK/woABAAAAAAAAADJ/woABAAAAAAAAADI/woABAAAAAAAAADH/woABAAAAAAAAADG/woABAAAAAAAAADF/woABAAAAAAAAADE/woABAAAAAAAAADD/woABAAAAAAAAADC/woABAAAAAAAAADB/woABAAAAAAAAADA/woABAAAAAAAAAC//woABAAAAAAAAAC+/woABAAAAAAAAAC9/woABAAAAAAAAAC8/woABAAAAAAAAAC7/woABAAAAAAAAAC6/woABAAAAAAAAAC5/woABAAAAAAAAAC4/woABAAAAAAAAAC3/woABAAAAAAAAAC2/woABAAAAAAAAAC1/woABAAAAAAAAAC0/woABAAAAAAAAACz/woABAAAAAAAAACy/woABAAAAAAAAACx/woABAAAAAAAAACw/woABAAAAAAAAACv/woABAAAAAAAAACu/woABAAAAAAAAACt/woABAAAAAAAAACs/woABAAAAAAAAACr/woABAAAAAAAAACq/woABAAAAAAAAADF/wkABAAAAAAAAADE/wkABAAAAAAAAADD/wkABAAAAAAAAADC/wkABAAAAAAAAADB/wkABAAAAAAAAADA/wkABAAAAAAAAAC//wkABAAAAAAAAAC+/wkABAAAAAAAAAC9/wkABAAAAAAAAAC8/wkABAAAAAAAAAC7/wkABAAAAAAAAAC6/wkABAAAAAAAAAC5/wkABAAAAAAAAAC4/wkABAAAAAAAAAC3/wkABAAAAAAAAAC2/wkABAAAAAAAAAC1/wkABAAAAAAAAAC0/wkABAAAAAAAAACz/wkABAAAAAAAAACy/wkABAAAAAAAAACx/wkABAAAAAAAAACw/wkABAAAAAAAAACv/wkABAAAAAAAAACu/wkABAAAAAAAAACt/wkABAAAAAAAAACs/wkABAAAAAAAAACr/wkABAAAAAAAAACq/wkABAAAAAAAAADG/wkABAAAAAAAAADH/wkABAAAAAAAAADg/wkABAAAAAAAAADf/wkABAAAAAAAAADe/wkABAAAAAAAAADd/wkABAAAAAAAAADc/wkABAAAAAAAAADb/wkABAAAAAAAAADa/wkABAAAAAAAAADZ/wkABAAAAAAAAADY/wkABAAAAAAAAADh/wkABAAAAAAAAADh/wgABAAAAAAAAADi/wgABAAAAAAAAADi/wkABAAAAAAAAADj/wkABAAAAAAAAADj/wgABAAAAAAAAADk/wgABAAAAAAAAADk/wkABAAAAAAAAADl/wkABAAAAAAAAADl/wgAAwAAAAAAAADm/wkAAwAAAAAAAAAmAAgAAwAAAAAAAAAmAAkABAAAAAAAAAAmAAoABAAAAAAAAAAnAAgAAwAAAAAAAAAnAAkABAAAAAAAAAAnAAoABAAAAAAAAAAoAAgAAwAAAAAAAAAoAAkABAAAAAAAAAAoAAoABAAAAAAAAAApAAgAAwAAAAAAAAApAAkABAAAAAAAAAApAAoABAAAAAAAAAAqAAgAAwAAAAAAAAAqAAkABAAAAAAAAAAqAAoABAAAAAAAAAArAAgAAwAAAAAAAAArAAkABAAAAAAAAAArAAoABAAAAAAAAAAsAAgAAwAAAAAAAAAsAAkABAAAAAAAAAAsAAoABAAAAAAAAAAtAAgAAwAAAAAAAAAtAAkABAAAAAAAAAAtAAoABAAAAAAAAAAuAAgAAwAAAAAAAAAuAAkABAAAAAAAAAAuAAoABAAAAAAAAAAvAAgAAwAAAAAAAAAvAAkABAAAAAAAAAAvAAoABAAAAAAAAAAwAAgAAwAAAAAAAAAwAAkABAAAAAAAAAAwAAoABAAAAAAAAAAxAAgAAwAAAAAAAAAxAAkABAAAAAAAAAAxAAoABAAAAAAAAAAyAAgAAwAAAAAAAAAyAAkABAAAAAAAAAAyAAoABAAAAAAAAAAzAAgAAwAAAAAAAAAzAAkABAAAAAAAAAAzAAoABAAAAAAAAAA0AAgAAwAAAAAAAAA0AAkABAAAAAAAAAA0AAoABAAAAAAAAAA1AAgAAwAAAAAAAAA1AAkABAAAAAAAAAA1AAoABAAAAAAAAAA2AAgAAwAAAAAAAAA2AAkABAAAAAAAAAA2AAoABAAAAAAAAAA3AAgAAwAAAAAAAAA3AAkABAAAAAAAAAA3AAoABAAAAAAAAAA4AAgABAAAAAAAAAA4AAkABAAAAAAAAAA4AAoABAAAAAAAAAA5AAgABAAAAAAAAAA5AAkABAAAAAAAAAA5AAoABAAAAAAAAAA6AAgABAAAAAAAAAA6AAkABAAAAAAAAAA6AAoABAAAAAAAAAA7AAgABAAAAAAAAAA7AAkABAAAAAAAAAA7AAoABAAAAAAAAAA8AAgABAAAAAAAAAA8AAkABAAAAAAAAAA8AAoABAAAAAAAAAA9AAgABAAAAAAAAAA9AAkABAAAAAAAAAA9AAoABAAAAAAAAAA+AAgABAAAAAAAAAA+AAkABAAAAAAAAAA+AAoABAAAAAAAAAA/AAgABAAAAAAAAAA/AAkABAAAAAAAAAA/AAoABAAAAAAAAABAAAgABAAAAAAAAABAAAkABAAAAAAAAABAAAoABAAAAAAAAABBAAgABAAAAAAAAABBAAkABAAAAAAAAABBAAoABAAAAAAAAABCAAgABAAAAAAAAABCAAkABAAAAAAAAABCAAoABAAAAAAAAABDAAgABAAAAAAAAABDAAkABAAAAAAAAABDAAoABAAAAAAAAABEAAgABAAAAAAAAABEAAkABAAAAAAAAABEAAoABAAAAAAAAAA4AAcAAwAAAAAAAAA5AAcAAwAAAAAAAAA6AAcAAwAAAAAAAAA7AAcAAwAAAAAAAAA8AAcABAAAAAAAAAA9AAcABAAAAAAAAAA+AAcABAAAAAAAAAA/AAcABAAAAAAAAABAAAcABAAAAAAAAABBAAcABAAAAAAAAABCAAcABAAAAAAAAABDAAcABAAAAAAAAABEAAcABAAAAAAAAAA8AAYAAwAAAAAAAAA9AAYABAAAAAAAAAA+AAYABAAAAAAAAAA/AAYABAAAAAAAAABAAAYABAAAAAAAAABBAAYABAAAAAAAAABCAAYABAAAAAAAAABDAAYABAAAAAAAAABEAAYABAAAAAAAAABFAAYABAAAAAAAAABFAAcABAAAAAAAAABFAAgABAAAAAAAAABFAAkABAAAAAAAAABFAAoABAAAAAAAAABGAAYABAAAAAAAAABGAAcABAAAAAAAAABGAAgABAAAAAAAAABGAAkABAAAAAAAAABGAAoABAAAAAAAAABHAAYABAAAAAAAAABHAAcABAAAAAAAAABHAAgABAAAAAAAAABHAAkABAAAAAAAAABHAAoABAAAAAAAAABIAAYABAAAAAAAAABIAAcABAAAAAAAAABIAAgABAAAAAAAAABIAAkABAAAAAAAAABIAAoABAAAAAAAAABJAAYABAAAAAAAAABJAAcABAAAAAAAAABJAAgABAAAAAAAAABJAAkABAAAAAAAAABJAAoABAAAAAAAAABKAAYABAAAAAAAAABKAAcABAAAAAAAAABKAAgABAAAAAAAAABKAAkABAAAAAAAAABKAAoABAAAAAAAAABLAAYABAAAAAAAAABLAAcABAAAAAAAAABLAAgABAAAAAAAAABLAAkABAAAAAAAAABLAAoABAAAAAAAAABMAAYABAAAAAAAAABMAAcABAAAAAAAAABMAAgABAAAAAAAAABMAAkABAAAAAAAAABMAAoABAAAAAAAAABNAAYABAAAAAAAAABNAAcABAAAAAAAAABNAAgABAAAAAAAAABNAAkABAAAAAAAAABNAAoABAAAAAAAAABOAAYABAAAAAAAAABOAAcABAAAAAAAAABOAAgABAAAAAAAAABOAAkABAAAAAAAAABOAAoABAAAAAAAAABPAAYABAAAAAAAAABPAAcABAAAAAAAAABPAAgABAAAAAAAAABPAAkABAAAAAAAAABPAAoABAAAAAAAAAA9AAUAAwAAAAAAAAA+AAUAAwAAAAAAAAA/AAUAAwAAAAAAAABAAAUAAwAAAAAAAABBAAUAAwAAAAAAAABCAAUAAwAAAAAAAABDAAUAAwAAAAAAAABEAAUAAwAAAAAAAABFAAUAAwAAAAAAAABGAAUAAwAAAAAAAABHAAUAAwAAAAAAAABIAAUAAwAAAAAAAABJAAUAAwAAAAAAAABKAAUAAwAAAAAAAABLAAUAAwAAAAAAAABMAAUAAwAAAAAAAABNAAUABAAAAAAAAABOAAUABAAAAAAAAABPAAUABAAAAAAAAABPAAQABAAAAAAAAABPAAMABAAAAAAAAABPAAIABAAAAAAAAABPAAEABAAAAAAAAABPAAAABAAAAAAAAABPAP//BAAAAAAAAABPAP7/BAAAAAAAAABPAP3/BAAAAAAAAABPAPz/BAAAAAAAAABQAPz/BAAAAAAAAABQAP3/BAAAAAAAAABQAP7/BAAAAAAAAABQAP//BAAAAAAAAABQAAAABAAAAAAAAABQAAEABAAAAAAAAABQAAIABAAAAAAAAABQAAMABAAAAAAAAABQAAQABAAAAAAAAABQAAUABAAAAAAAAABQAAYABAAAAAAAAABQAAcABAAAAAAAAABQAAgABAAAAAAAAABQAAkABAAAAAAAAABQAAoABAAAAAAAAABRAPz/BAAAAAAAAABRAP3/BAAAAAAAAABRAP7/BAAAAAAAAABRAP//BAAAAAAAAABRAAAABAAAAAAAAABRAAEABAAAAAAAAABRAAIABAAAAAAAAABRAAMABAAAAAAAAABRAAQABAAAAAAAAABRAAUABAAAAAAAAABRAAYABAAAAAAAAABRAAcABAAAAAAAAABRAAgABAAAAAAAAABRAAkABAAAAAAAAABRAAoABAAAAAAAAABSAPz/BAAAAAAAAABSAP3/BAAAAAAAAABSAP7/BAAAAAAAAABSAP//BAAAAAAAAABSAAAABAAAAAAAAABSAAEABAAAAAAAAABSAAIABAAAAAAAAABSAAMABAAAAAAAAABSAAQABAAAAAAAAABSAAUABAAAAAAAAABSAAYABAAAAAAAAABSAAcABAAAAAAAAABSAAgABAAAAAAAAABSAAkABAAAAAAAAABSAAoABAAAAAAAAABTAPz/BAAAAAAAAABTAP3/BAAAAAAAAABTAP7/BAAAAAAAAABTAP//BAAAAAAAAABTAAAABAAAAAAAAABTAAEABAAAAAAAAABTAAIABAAAAAAAAABTAAMABAAAAAAAAABTAAQABAAAAAAAAABTAAUABAAAAAAAAABTAAYABAAAAAAAAABTAAcABAAAAAAAAABTAAgABAAAAAAAAABTAAkABAAAAAAAAABTAAoABAAAAAAAAABUAPz/BAAAAAAAAABUAP3/BAAAAAAAAABUAP7/BAAAAAAAAABUAP//BAAAAAAAAABUAAAABAAAAAAAAABUAAEABAAAAAAAAABUAAIABAAAAAAAAABUAAMABAAAAAAAAABUAAQABAAAAAAAAABUAAUABAAAAAAAAABUAAYABAAAAAAAAABUAAcABAAAAAAAAABUAAgABAAAAAAAAABUAAkABAAAAAAAAABUAAoABAAAAAAAAABVAPz/BAAAAAAAAABVAP3/BAAAAAAAAABVAP7/BAAAAAAAAABVAP//BAAAAAAAAABVAAAABAAAAAAAAABVAAEABAAAAAAAAABVAAIABAAAAAAAAABVAAMABAAAAAAAAABVAAQABAAAAAAAAABVAAUABAAAAAAAAABVAAYABAAAAAAAAABVAAcABAAAAAAAAABVAAgABAAAAAAAAABVAAkABAAAAAAAAABVAAoABAAAAAAAAABWAPz/BAAAAAAAAABWAP3/BAAAAAAAAABWAP7/BAAAAAAAAABWAP//BAAAAAAAAABWAAAABAAAAAAAAABWAAEABAAAAAAAAABWAAIABAAAAAAAAABWAAMABAAAAAAAAABWAAQABAAAAAAAAABWAAUABAAAAAAAAABWAAYABAAAAAAAAABWAAcABAAAAAAAAABWAAgABAAAAAAAAABWAAkABAAAAAAAAABWAAoABAAAAAAAAABXAPz/BAAAAAAAAABXAP3/BAAAAAAAAABXAP7/BAAAAAAAAABXAP//BAAAAAAAAABXAAAABAAAAAAAAABXAAEABAAAAAAAAABXAAIABAAAAAAAAABXAAMABAAAAAAAAABXAAQABAAAAAAAAABXAAUABAAAAAAAAABXAAYABAAAAAAAAABXAAcABAAAAAAAAABXAAgABAAAAAAAAABXAAkABAAAAAAAAABXAAoABAAAAAAAAABYAPz/BAAAAAAAAABYAP3/BAAAAAAAAABYAP7/BAAAAAAAAABYAP//BAAAAAAAAABYAAAABAAAAAAAAABYAAEABAAAAAAAAABYAAIABAAAAAAAAABYAAMABAAAAAAAAABYAAQABAAAAAAAAABYAAUABAAAAAAAAABYAAYABAAAAAAAAABYAAcABAAAAAAAAABYAAgABAAAAAAAAABYAAkABAAAAAAAAABYAAoABAAAAAAAAABZAPz/BAAAAAAAAABZAP3/BAAAAAAAAABZAP7/BAAAAAAAAABZAP//BAAAAAAAAABZAAAABAAAAAAAAABZAAEABAAAAAAAAABZAAIABAAAAAAAAABZAAMABAAAAAAAAABZAAQABAAAAAAAAABZAAUABAAAAAAAAABZAAYABAAAAAAAAABZAAcABAAAAAAAAABZAAgABAAAAAAAAABZAAkABAAAAAAAAABZAAoABAAAAAAAAABaAPz/BAAAAAAAAABaAP3/BAAAAAAAAABaAP7/BAAAAAAAAABaAP//BAAAAAAAAABaAAAABAAAAAAAAABaAAEABAAAAAAAAABaAAIABAAAAAAAAABaAAMABAAAAAAAAABaAAQABAAAAAAAAABaAAUABAAAAAAAAABaAAYABAAAAAAAAABaAAcABAAAAAAAAABaAAgABAAAAAAAAABaAAkABAAAAAAAAABaAAoABAAAAAAAAABOAP//BAAAAAAAAABOAAAABAAAAAAAAABOAAEABAAAAAAAAABOAAIABAAAAAAAAABOAAMABAAAAAAAAABOAAQABAAAAAAAAABNAAEABAAAAAAAAABNAAIABAAAAAAAAABNAAMABAAAAAAAAABNAAQABAAAAAAAAABNAAAAAwAAAAAAAABOAP7/AwAAAAAAAACo/wkABAAAAAAAAACo/wgABAAAAAAAAACo/wcABAAAAAAAAACn/wYABAAAAAAAAACn/wUABAAAAAAAAACn/wQABAAAAAAAAACo/wQABAAAAAAAAACo/wUABAAAAAAAAACo/wYABAAAAAAAAACo/woABAAAAAAAAACn/wgABAAAAAAAAACn/wcABAAAAAAAAACn/woABAAAAAAAAACm/woABAAAAAAAAACl/woABAAAAAAAAACk/woABAAAAAAAAACj/woABAAAAAAAAACi/woABAAAAAAAAACh/woABAAAAAAAAACg/woABAAAAAAAAACf/woABAAAAAAAAACe/woABAAAAAAAAACd/woABAAAAAAAAACc/woABAAAAAAAAACb/woABAAAAAAAAACb/wkABAAAAAAAAACb/wgABAAAAAAAAACb/wcABAAAAAAAAACb/wYABAAAAAAAAACb/wUABAAAAAAAAACb/wQABAAAAAAAAACb/wMABAAAAAAAAACb/wIABAAAAAAAAACb/wEABAAAAAAAAACb/wAABAAAAAAAAACb////BAAAAAAAAACb//7/BAAAAAAAAACb//3/BAAAAAAAAACc//3/BAAAAAAAAACd//3/BAAAAAAAAACe//3/BAAAAAAAAACf//3/BAAAAAAAAACg//3/BAAAAAAAAACh//3/BAAAAAAAAACi//3/BAAAAAAAAACj//3/BAAAAAAAAACk//3/BAAAAAAAAACk//7/BAAAAAAAAACk////BAAAAAAAAACk/wAABAAAAAAAAACk/wEABAAAAAAAAACk/wIABAAAAAAAAACk/wMABAAAAAAAAACl/wMABAAAAAAAAACm/wMABAAAAAAAAACm/wQABAAAAAAAAACl/wIABAAAAAAAAACZ/woABAAAAAAAAACZ/wkABAAAAAAAAACZ/wgABAAAAAAAAACZ/wcABAAAAAAAAACZ/wYABAAAAAAAAACZ/wUABAAAAAAAAACZ/wQABAAAAAAAAACZ/wMABAAAAAAAAACZ/wIABAAAAAAAAACZ/wEABAAAAAAAAACZ/wAABAAAAAAAAACZ////BAAAAAAAAACZ//7/BAAAAAAAAACZ//3/BAAAAAAAAACa//3/BAAAAAAAAACa//7/BAAAAAAAAACa////BAAAAAAAAACa/wAABAAAAAAAAACa/wEABAAAAAAAAACa/wIABAAAAAAAAACa/wMABAAAAAAAAACa/wQABAAAAAAAAACa/wUABAAAAAAAAACa/wYABAAAAAAAAACa/wcABAAAAAAAAACa/wgABAAAAAAAAACa/wkABAAAAAAAAACa/woABAAAAAAAAACh/wUABAAAAAAAAACh/wQABAAAAAAAAACh/wMABAAAAAAAAACh/wIABAAAAAAAAACh/wEABAAAAAAAAACh/wAABAAAAAAAAACh////BAAAAAAAAACh//7/BAAAAAAAAACg//7/BAAAAAAAAACf//7/BAAAAAAAAACe//7/BAAAAAAAAACd//7/BAAAAAAAAACc//7/BAAAAAAAAACc////BAAAAAAAAACc/wAABAAAAAAAAACc/wEABAAAAAAAAACc/wIABAAAAAAAAACc/wMABAAAAAAAAACc/wQABAAAAAAAAACc/wUABAAAAAAAAACc/wYABAAAAAAAAACc/wcABAAAAAAAAACc/wgABAAAAAAAAACc/wkABAAAAAAAAACd/wkABAAAAAAAAACd/wgABAAAAAAAAACd/wcABAAAAAAAAACd/wYABAAAAAAAAACd/wUABAAAAAAAAACd/wQABAAAAAAAAACd/wMABAAAAAAAAACd/wIABAAAAAAAAACd/wEABAAAAAAAAACd/wAABAAAAAAAAACd////BAAAAAAAAACe////BAAAAAAAAACe/wAABAAAAAAAAACe/wEABAAAAAAAAACe/wIABAAAAAAAAACe/wMABAAAAAAAAACe/wQABAAAAAAAAACe/wUABAAAAAAAAACe/wYABAAAAAAAAACe/wcABAAAAAAAAACe/wgABAAAAAAAAACe/wkABAAAAAAAAACf/wkABAAAAAAAAACf/wgABAAAAAAAAACf/wcABAAAAAAAAACf/wYABAAAAAAAAACf/wUABAAAAAAAAACf/wQABAAAAAAAAACf/wMABAAAAAAAAACf/wIABAAAAAAAAACf/wEABAAAAAAAAACf/wAABAAAAAAAAACf////BAAAAAAAAACg////BAAAAAAAAACg/wAABAAAAAAAAACg/wEABAAAAAAAAACg/wIABAAAAAAAAACg/wMABAAAAAAAAACg/wQABAAAAAAAAACg/wUABAAAAAAAAACg/wYABAAAAAAAAACg/wcABAAAAAAAAACg/wgABAAAAAAAAACg/wkABAAAAAAAAACh/wkABAAAAAAAAACh/wgABAAAAAAAAACh/wcABAAAAAAAAACh/wYABAAAAAAAAACi/wYABAAAAAAAAACi/wUABAAAAAAAAACi/wQABAAAAAAAAACi/wMABAAAAAAAAACi/wIABAAAAAAAAACi/wEABAAAAAAAAACi/wAABAAAAAAAAACi////BAAAAAAAAACi//7/BAAAAAAAAACj//7/BAAAAAAAAACj////BAAAAAAAAACj/wAABAAAAAAAAACj/wEABAAAAAAAAACj/wIABAAAAAAAAACj/wMABAAAAAAAAACj/wQABAAAAAAAAACj/wUABAAAAAAAAACj/wYABAAAAAAAAACj/wcABAAAAAAAAACi/wcABAAAAAAAAACi/wgABAAAAAAAAACi/wkABAAAAAAAAACj/wkABAAAAAAAAACj/wgABAAAAAAAAACk/wgABAAAAAAAAACk/wcABAAAAAAAAACk/wYABAAAAAAAAACk/wUABAAAAAAAAACk/wQABAAAAAAAAACl/wQABAAAAAAAAACl/wUABAAAAAAAAACl/wYABAAAAAAAAACl/wcABAAAAAAAAACl/wgABAAAAAAAAACl/wkABAAAAAAAAACk/wkABAAAAAAAAACm/wkABAAAAAAAAACm/wgABAAAAAAAAACm/wcABAAAAAAAAACm/wYABAAAAAAAAACm/wUABAAAAAAAAACn/wkABAAAAAAAAACp/wcAAwAAAAAAAACq/wcAAwAAAAAAAACo/wMAAwAAAAAAAACn/wMAAwAAAAAAAACm/wIAAwAAAAAAAACl/wEAAwAAAAAAAAD8/wcAAwAAAAAAAAAZAAcAAwAAAAAAAAAaAAgAAwAAAAAAAAAZAAgABAAAAAAAAAAUAAkABAAAAAAAAAAVAAkABAAAAAAAAAAWAAkABAAAAAAAAAAXAAkABAAAAAAAAAAYAAkABAAAAAAAAAALAAcAAwAAAAAAAAALAAgABAAAAAAAAAAMAAgAAwAAAAAAAAANAAgAAwAAAAAAAAAXAAgAAwAAAAAAAAA=")
tile_set = ExtResource("2_wkirf")

[node name="Parallax2D" type="Parallax2D" parent="."]
z_index = -26
scroll_scale = Vector2(0.085, 0.085)
scroll_offset = Vector2(-27, 152)
repeat_size = Vector2(576, 0)
autoscroll = Vector2(4, 0)
repeat_times = 4

[node name="Cloud5" type="Sprite2D" parent="Parallax2D"]
z_index = -18
position = Vector2(433.13, -113)
texture = SubResource("CompressedTexture2D_6m2u8")

[node name="Cloud9" type="Sprite2D" parent="Parallax2D"]
z_index = -18
position = Vector2(656.13, -197)
texture = SubResource("CompressedTexture2D_6m2u8")

[node name="Cloud10" type="Sprite2D" parent="Parallax2D"]
z_index = -18
position = Vector2(473.13, -168)
texture = SubResource("CompressedTexture2D_6m2u8")

[node name="Cloud11" type="Sprite2D" parent="Parallax2D"]
z_index = -18
position = Vector2(473.13, -168)
texture = SubResource("CompressedTexture2D_6m2u8")

[node name="Cloud2" type="Sprite2D" parent="Parallax2D"]
z_index = -18
position = Vector2(99.13, -91)
texture = SubResource("CompressedTexture2D_6m2u8")

[node name="Cloud3" type="Sprite2D" parent="Parallax2D"]
position = Vector2(319.13, -108)
texture = ExtResource("3_o1cut")

[node name="Cloud8" type="Sprite2D" parent="Parallax2D"]
position = Vector2(418.13, -74)
texture = ExtResource("3_o1cut")

[node name="Cloud4" type="Sprite2D" parent="Parallax2D"]
position = Vector2(188.13, -62)
texture = ExtResource("3_o1cut")

[node name="Cloud6" type="Sprite2D" parent="Parallax2D"]
position = Vector2(245.13, -95)
texture = ExtResource("4_nax64")

[node name="Cloud7" type="Sprite2D" parent="Parallax2D"]
position = Vector2(513.13, -92)
texture = ExtResource("4_nax64")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -30

[node name="BG" type="Sprite2D" parent="BackgroundLayer"]
z_index = -150
texture_repeat = 2
position = Vector2(291, 162)
scale = Vector2(5.20139, 1)
texture = ExtResource("5_nat85")
metadata/_edit_lock_ = true

[node name="CrtFilter" type="CanvasLayer" parent="."]
process_mode = 3
layer = 100

[node name="ColorRect" type="ColorRect" parent="CrtFilter"]
material = SubResource("ShaderMaterial_kh66f")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Well" parent="." instance=ExtResource("7_6djy2")]
position = Vector2(64.13, 259)

[node name="Tree" parent="." instance=ExtResource("8_vhyda")]
position = Vector2(623, 284)

[node name="Tree3" parent="." instance=ExtResource("8_vhyda")]
position = Vector2(1719, 181)

[node name="Tree2" parent="." instance=ExtResource("8_vhyda")]
position = Vector2(158.13, 262)

[node name="Seed" type="Sprite2D" parent="."]
position = Vector2(293, 13)
texture = ExtResource("8_p4v2a")
hframes = 9
frame = 2

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(288, 164)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qjen6")
}

[node name="Button4" type="Button" parent="."]
layout_mode = 2
offset_left = 829.0
offset_top = 258.0
offset_right = 889.0
offset_bottom = 282.0
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath(".")
focus_previous = NodePath(".")
text = "Back"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -9.0
offset_right = 30.0
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -3

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Button3")
focus_neighbor_bottom = NodePath("../Button2")
text = "Play
"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits
"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Button2")
text = "Quit"

[connection signal="pressed" from="Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
